--- a/B737-800X/sd15/fltctlnav2.yaml
+++ b/B737-800X/sd15/fltctlnav2.yaml
@@ -93,4 +93,4 @@ actions:
     type: none
     icon: yawdamper
     dataref: laminar/B738/annunciator/yaw_damp
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
