--- a/B737-800X/sd15/left.yaml
+++ b/B737-800X/sd15/left.yaml
@@ -5,7 +5,7 @@ actions:
     type: single
     icon: fltcont
     dataref: laminar/B738/annunciator/six_pack_flt_cont
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
     command: FlyWithLua/streamdeck_handler/capt_six_pack_start
     command-release: FlyWithLua/streamdeck_handler/capt_six_pack_end
   - index: 1
@@ -13,7 +13,7 @@ actions:
     type: single
     icon: elec
     dataref: laminar/B738/annunciator/six_pack_elec
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
     command: FlyWithLua/streamdeck_handler/capt_six_pack_start
     command-release: FlyWithLua/streamdeck_handler/capt_six_pack_end
   - index: 5
@@ -21,7 +21,7 @@ actions:
     type: single
     icon: irs
     dataref: laminar/B738/annunciator/six_pack_irs
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
     command: FlyWithLua/streamdeck_handler/capt_six_pack_start
     command-release: FlyWithLua/streamdeck_handler/capt_six_pack_end
   - index: 6
@@ -29,7 +29,7 @@ actions:
     type: single
     icon: apu
     dataref: laminar/B738/annunciator/six_pack_apu
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
     command: FlyWithLua/streamdeck_handler/capt_six_pack_start
     command-release: FlyWithLua/streamdeck_handler/capt_six_pack_end
   - index: 10
@@ -37,7 +37,7 @@ actions:
     type: single
     icon: fuel
     dataref: laminar/B738/annunciator/six_pack_fuel
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
     command: FlyWithLua/streamdeck_handler/capt_six_pack_start
     command-release: FlyWithLua/streamdeck_handler/capt_six_pack_end
   - index: 11
@@ -45,7 +45,7 @@ actions:
     type: single
     icon: ovhtdet
     dataref: laminar/B738/annunciator/six_pack_fire
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
     command: FlyWithLua/streamdeck_handler/capt_six_pack_start
     command-release: FlyWithLua/streamdeck_handler/capt_six_pack_end
   # capt six-pack end
@@ -55,7 +55,7 @@ actions:
     type: single
     icon: antiice
     dataref: laminar/B738/annunciator/six_pack_ice
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
     command: FlyWithLua/streamdeck_handler/capt_six_pack_start
     command-release: FlyWithLua/streamdeck_handler/capt_six_pack_end
   - index: 4
@@ -63,7 +63,7 @@ actions:
     type: single
     icon: eng
     dataref: laminar/B738/annunciator/six_pack_eng
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
     command: FlyWithLua/streamdeck_handler/capt_six_pack_start
     command-release: FlyWithLua/streamdeck_handler/capt_six_pack_end
   - index: 8
@@ -71,7 +71,7 @@ actions:
     type: single
     icon: hyd
     dataref: laminar/B738/annunciator/six_pack_hyd
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
     command: FlyWithLua/streamdeck_handler/capt_six_pack_start
     command-release: FlyWithLua/streamdeck_handler/capt_six_pack_end
   - index: 9
@@ -79,7 +79,7 @@ actions:
     type: single
     icon: overhead
     dataref: laminar/B738/annunciator/six_pack_overhead
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
     command: FlyWithLua/streamdeck_handler/capt_six_pack_start
     command-release: FlyWithLua/streamdeck_handler/capt_six_pack_end
   - index: 13
@@ -87,7 +87,7 @@ actions:
     type: single
     icon: doors
     dataref: laminar/B738/annunciator/six_pack_doors
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
     command: FlyWithLua/streamdeck_handler/capt_six_pack_start
     command-release: FlyWithLua/streamdeck_handler/capt_six_pack_end
   - index: 14
@@ -95,7 +95,7 @@ actions:
     type: single
     icon: aircond
     dataref: laminar/B738/annunciator/six_pack_air_cond
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
     command: FlyWithLua/streamdeck_handler/capt_six_pack_start
     command-release: FlyWithLua/streamdeck_handler/capt_six_pack_end
     # f/o six pack end
@@ -109,6 +109,6 @@ actions:
     type: single
     icon: mastercaution
     dataref: laminar/B738/annunciator/master_caution_light
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
     command: FlyWithLua/streamdeck_handler/capt_master_caution_start
     command-release: FlyWithLua/streamdeck_handler/capt_master_caution_end
