--- a/B737-800X/sd15/actions.yaml
+++ b/B737-800X/sd15/actions.yaml
@@ -4,7 +4,7 @@ actions:
     type: single
     icon: firewarn
     dataref: laminar/B738/annunciator/fire_bell_annun
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
     command: FlyWithLua/streamdeck_handler/capt_fire_warn_start
     command-release: FlyWithLua/streamdeck_handler/capt_fire_warn_end
   - index: 1
@@ -12,7 +12,7 @@ actions:
     type: single
     icon: mastercaution
     dataref: laminar/B738/annunciator/master_caution_light
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
     command: FlyWithLua/streamdeck_handler/capt_master_caution_start
     command-release: FlyWithLua/streamdeck_handler/capt_master_caution_end
   - index: 2
@@ -20,7 +20,7 @@ actions:
     type: single
     icon: apprst
     dataref: laminar/B738/annunciator/ap_disconnect1
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
     command: FlyWithLua/streamdeck_handler/ap_prst_start
     command-release: FlyWithLua/streamdeck_handler/ap_prst_end
   - index: 3
@@ -28,7 +28,7 @@ actions:
     type: single
     icon: atprst
     dataref: laminar/B738/annunciator/at_disconnect1
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
     command: FlyWithLua/streamdeck_handler/at_prst_start
     command-release: FlyWithLua/streamdeck_handler/at_prst_end
   - index: 4
@@ -36,7 +36,7 @@ actions:
     type: single
     icon: fmcprst
     dataref: laminar/B738/annunciator/at_fms_disconnect1
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
     command: FlyWithLua/streamdeck_handler/fmc_prst_start
     command-release: FlyWithLua/streamdeck_handler/fmc_prst_end
   - index: 5
@@ -44,19 +44,19 @@ actions:
     type: single
     icon: speedbrakearmed
     dataref: laminar/B738/annunciator/speedbrake_armed
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
   - index: 6
     name: speedbrake do not arm
     type: single
     icon: speedbrakedonotarm
     dataref: laminar/B738/annunciator/speedbrake_extend
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
   - index: 7
     name: stab out of trim
     type: single
     icon: staboutoftrim
     dataref: laminar/B738/annunciator/stab_out_of_trim
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
   - index: 11
     name: flaps
     type: dir
@@ -78,13 +78,13 @@ actions:
     type: single
     icon: leflapstransit
     dataref: laminar/B738/annunciator/slats_transit
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
   - index: 13
     name: le flaps ext
     type: single
     icon: leflapsext
     dataref: laminar/B738/annunciator/slats_extend
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
   - index: 10
     name: left
     type: dir
