--- a/B737-800X/sd32/fire.yaml
+++ b/B737-800X/sd32/fire.yaml
@@ -16,7 +16,7 @@ actions:
     type: none
     icon: eng1overheat
     dataref: laminar/B738/annunciator/engine1_ovht
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
   - index: 26
     type: single
     name: fire ovht test
@@ -29,31 +29,31 @@ actions:
     type: none
     icon: wheelwell
     dataref: laminar/B738/annunciator/wheel_well_fire
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
   - index: 11
     name: fire fault inop
     type: none
     icon: fault
     dataref: laminar/B738/annunciator/fire_fault_inop
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
   - index: 19
     name: apu det inop
     type: none
     icon: apudetinop
     dataref: laminar/B738/annunciator/fire_fault_inop # dataref not found
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
   - index: 27
     name: apu det inop
     type: none
     icon: apubottledischarge
     dataref: laminar/B738/annunciator/apu_bottle_discharge
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
   - index: 5
     name: eng 2 overheat
     type: none
     icon: eng2overheat
     dataref: laminar/B738/annunciator/engine2_ovht
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
   - index: 22
     name: exttest
     type: dir
@@ -63,25 +63,25 @@ actions:
     type: none
     icon: extcircuit
     dataref: laminar/B738/annunciator/extinguisher_circuit_annun_apu
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
   - index: 13
     name: left ext circuit
     type: none
     icon: extcircuit
     dataref: laminar/B738/annunciator/extinguisher_circuit_annun_left
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
   - index: 15
     name: right ext circuit
     type: none
     icon: extcircuit
     dataref: laminar/B738/annunciator/extinguisher_circuit_annun_right
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
   - index: 0
     name: fire warning
     type: single
     icon: firewarn
     dataref: laminar/B738/annunciator/fire_bell_annun
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
     command: FlyWithLua/streamdeck_handler/capt_fire_warn_start
     command-release: FlyWithLua/streamdeck_handler/capt_fire_warn_end
   - index: 8
@@ -89,6 +89,6 @@ actions:
     type: single
     icon: ovhtdet
     dataref: laminar/B738/annunciator/six_pack_fire
-    dataref-multiplier: 2.0
+    dataref-offset: 0.8
     command: FlyWithLua/streamdeck_handler/capt_six_pack_start
     command-release: FlyWithLua/streamdeck_handler/capt_six_pack_end
